2013-02-17 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.4.
    - rev 1078

2013-02-13 belangeo <belangeo@gmail.com>

    * Added pyo.USE_DOUBLE constant. 'import pyo' sets this constant to 0 and 'import pyo64' sets it to 1
    - rev 1073

2013-01-21 belangeo <belangeo@gmail.com>

    * Added __del__ method to the Server object with checks and necessary actions if the server is already started and/or booted.
    - rev 1065

2013-01-11 belangeo <belangeo@gmail.com>

    * Added new object: RCOsc. Waveform aproximation of a RC circuit.
    - rev 1063

2013-01-07 belangeo <belangeo@gmail.com>

    * Added new operators on To PyoObject. **, %, - (negative) and comparison operators.
    - rev 1062

2012-12-25 belangeo <belangeo@gmail.com>

    * Added new object: Delay1. Delays a signal by one sample.
    - rev 1058

2012-12-19 belangeo <belangeo@gmail.com>

    * Added new objects: Min and Max. Outputs minimum or maximum between two values.
    - rev 1049

2012-12-19 belangeo <belangeo@gmail.com>

    * Added a template for extending pyo with custom objects.
    - rev 1047

2012-12-18 belangeo <belangeo@gmail.com>

    * Added "sendMidiNote(pitch, velocity, channel, timestamp) method to the Server object".
    - rev 1046

2012-11-17 belangeo <belangeo@gmail.com>

    * Added new object: Atone: First-order recursive high-pass filter with variable frequency response.
    - rev 1031

2012-11-15 belangeo <belangeo@gmail.com>

    * Added new object: SuperSaw: Roland JP-8000 Supersaw emulator.
    - rev 1029

2012-11-14 belangeo <belangeo@gmail.com>

    * Added new object: TablePut: Writes values, without repetitions, from an audio stream into a DataTable.
    - rev 1027

-------------------------------------------------------------------------------------

2012-10-26 belangeo <belangeo@gmail.com>

    * rev 1025: Release tag: 0.6.3.

2012-10-13 belangeo <belangeo@gmail.com>
